--- a/StudyFocusMobApp/AppShell.xaml
+++ b/StudyFocusMobApp/AppShell.xaml
@@ -4,11 +4,28 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:StudyFocusMobApp"
-    Shell.FlyoutBehavior="Disabled">
+    Shell.TitleColor="#F3EBA3"
+    Shell.TabBarIsVisible="false"
+    Shell.BackgroundColor="#F3EBA3"
+    FlyoutIcon="menu.png">
+    
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <FlyoutItem Title="Dashboard" FlyoutDisplayOptions="AsMultipleItems">
+        <ShellContent
+            Title="Timer"
+            Icon="stopwatch.png"
+            ContentTemplate="{DataTemplate local:MainPage}"
+            Route="MainPage" />
+        <ShellContent
+            Title="To-Do List"
+            Icon="todo_list.png"
+            ContentTemplate="{DataTemplate local:TodoPage}"
+            Route="TodoPage" />
+        <ShellContent
+            Title="My Statistics"
+            Icon="statistics.png"
+            ContentTemplate="{DataTemplate local:StatisticsPage }"
+            Route="StatisticsPage" />
+    </FlyoutItem>
 
 </Shell>
