sqlite working properly
View folder added and pages moved there.
SQLite was working fine in prev commit, but binding name was wrong ID instead of Id

--- a/StudyFocusMobApp/Views/StatisticsPage.xaml
+++ b/StudyFocusMobApp/Views/StatisticsPage.xaml
@@ -5,7 +5,7 @@
              Title="StatisticsPage">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="TODO: Statistics"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
