--- a/StudyFocusMobApp/Views/TodoPage.xaml
+++ b/StudyFocusMobApp/Views/TodoPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="StudyFocusMobApp.TodoPage"
+             BackgroundColor="{DynamicResource Light}"
              Title="TodoPage">
     
     <Grid Padding="5" RowSpacing="1" ColumnSpacing="1">
@@ -41,7 +42,7 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Text="{Binding Id}" />
-                        <Label Grid.Column="1" Text="{Binding Name}" />
+                        <Label Grid.Column="1" Text="{Binding Description}" />
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
